--- a/scan.html
+++ b/scan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scan Barcode</title>
-    <link rel="stylesheet" href="css/scan.css">
+    <link rel="stylesheet" href="scan.css">
 </head>
 
 <body>
